--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "app/src/main/java/com/sarang/torang/di/torang_network_di"]
 	path = app/src/main/java/com/sarang/torang/di/torang_network_di
 	url = https://github.com/sarang628/torang_network_di.git
+[submodule "app/src/main/java/com/sarang/torang/di/restaurant_list_bottom_sheet_di"]
+	path = app/src/main/java/com/sarang/torang/di/restaurant_list_bottom_sheet_di
+	url = https://github.com/sarang628/restaurant_list_bottom_sheet_di.git
